# ccomp

./: .clang-format  .clangd  .gitignore  meson.build  meson_options.txt
app/: meson.build
app/src/: main.cc  meson.build
include/: logger.hh
include/graphic/: geometry.hh
include/math/: algorithm.hh  arithmetic.hh  point.hh  rect.hh  size.hh
include/wayland/: util.hh
include/wayland/core/: display.hh  event_loop.hh  global.hh
include/wayland/protocol/: compositor.hh
lib/: meson.build
lib/libccomp/: meson.build
lib/libccomp/include/: libc.hh  logger.hh
lib/libccomp/include/graphic/: geometry.hh  pixel_format.hh  region.hh
lib/libccomp/include/signal/: bind.hh  method.hh  signal.hh
lib/libccomp/include/wayland/: util.hh
lib/libccomp/include/wayland/core/: display.hh  global.hh
lib/libccomp/include/wayland/protocol/: buffer.hh  compositor.hh  shm.hh
lib/libccomp/src/: logger.cc  meson.build
lib/libccomp/src/graphic/: meson.build  pixel_format.cc  region.cc
lib/libccomp/src/wayland/: util.cc
lib/libccomp/src/wayland/core/: display.cc  event_loop.cc  global.cc  meson.build
lib/libccomp/src/wayland/protocol/: buffer.cc  meson.build
lib/libccomp/src/wayland/protocol/compositor/: compositor.cc  region.cc  surface.cc
lib/libccomp/src/wayland/protocol/shm/: buffer.cc  meson.build  pool.cc  shm.cc
src/: libc.cc  logger.cc  main.cc  meson.build
src/graphic/: region.cc
src/wayland/: meson.build
src/wayland/core/: display.cc  meson.build
src/wayland/protocol/: meson.build
src/wayland/protocol/compositor/: compositor.cc  meson.build  region.cc  surface.cc
subprojects/: .gitignore
subprojects/entt-3.11.0/: .meson-subproject-wrap-hash.txt
subprojects/logger/: logger.cc  logger.hh  meson.build
